# Wireshark-mcp

./: README.md  mcp_server.py  pyproject.toml  requirements.txt
docs/: README.md  a2a_module.md  agent_to_agent_integration.md  claude_integration.md  installation.md  ip_protection.md  linux_installation.md  macos_installation.md  security_manager.md  security_signature.md  web_interface_explained.md  windows_installation.md
docs/images/: README.md
examples/: a2a_example.py  dns_analysis_example.py  ip_protection_example.py  network_analysis_example.py  security_manager_example.py  security_signature_example.py  smtp_analysis_example.py
scripts/: README.md  analyze_pcap.py  simple_pcap_analysis.py
web_interface/: README.md  app.py  requirements.txt
web_interface/docs/: a2a_implementation_guide.md  a2a_integration.md  a2a_schema_example.json  mcp_a2a_comparison.md
web_interface/static/css/: styles.css
web_interface/templates/: 404.html  500.html  analyze.html  index.html  layout.html  protocol.html
wireshark_mcp/: __init__.py  cli.py  core.py  filter.py  flow_analyzer.py  ip_protection.py  security.py  security_analyzer.py  security_manager.py
wireshark_mcp/a2a/: __init__.py  agent.py  cli.py  integration.py  security.py  server.py  server_app.py
wireshark_mcp/ai/: __init__.py  claude.py
wireshark_mcp/extractors/: __init__.py  base.py  tshark.py
wireshark_mcp/formatter/: __init__.py  base.py
wireshark_mcp/formatters/: __init__.py  base.py  claude.py
wireshark_mcp/protocols/: __init__.py  base.py  dns.py  http.py  smtp.py  tls.py
(+1 files in other folders)
